resym_core/tests/snapshots/type_reconstruction__test_type_reconstruction_no_offset_info-6.snap
---
source: resym_core/tests/type_reconstruction.rs
assertion_line: 184
expression: reconstructed_type
---
enum resym_test::EnumTest1 : int32_t {
  kEnumTest1Val1 = 0x0000,
  kEnumTest1Val2 = 0x0001,
  kEnumTest1Val3 = 0x0002,
};
