resym_core/tests/snapshots/type_reconstruction__test_type_reconstruction_no_size_info-1.snap
---
source: resym_core/tests/type_reconstruction.rs
assertion_line: 184
expression: reconstructed_type
---
struct resym_test::ArrayTest {
  /* 0x0000 */ char array1[64];
  /* 0x0040 */ int32_t array2[64];
  /* 0x0140 */ resym_test::PrimitiveTypesTest array3[64];
  /* 0x1d40 */ char array4[1][2][3][4][5];
  /* 0x1db8 */ int32_t array5[1][2][3][4][5];
  /* 0x1f98 */ resym_test::PrimitiveTypesTest array6[1][2][3][4][5];
};
